src/styles/Sponsors.css
.sponsors-container {
  min-height: 75vh;
  background-color: #fafafa;
  position: relative;
}
.sponsors-text {
  color: white;
  text-align: left;
  margin-top: -2px;
  padding: 100px 10% 78px;
}
.sponsors-title {
  font-family: "Nunito", sans-serif;
  display: block;
  font-size: 2.5em;
  margin-bottom: 5px;
  letter-spacing: 5px;
  text-transform: uppercase;
  font-weight: 700;
}

.sponsors-details {
  font-size: 1.3em;
  font-weight: 200;
  opacity: 0.8;
}
.sponsors-details > a {
  color: #64B5F6;
  font-weight: 400;
}
.individual-sponsor {
  padding: 0px 10%;
  text-align: left;
}
.year-titles {
  font-family: 'Montserrat', sans-serif;
  padding-top: 10px;
  text-align: left;
  color: #64B5F6;
  font-size: 2em;
  letter-spacing: 1px;
  display: block;
  font-weight: bold;
  text-transform: uppercase;
}
.individual-sponsor>a{
    color: inherit; 
    text-decoration: inherit;
}
.previous-sponsors>a{
    color: inherit; 
    text-decoration: inherit;
}
.sponsors-details>span{
    color:#64B5F6;
    font-weight: 400;
}
.sponsors-background{
    background-image: url("/images/sponsors/background.svg");
    background-repeat: no-repeat;
   
}
@media only screen and (min-width:1450px){
    .sponsors-background{
        background-size: cover;
    }
    
}
@media only screen and (max-width: 600px) {
  .filler-background {
    background-color: #000d1b;
    height: 20vh;
    margin-top: -15px;
  }
  .sponsors-text {
    min-height: 25vh;
    padding: 38px 10% 38px;
  }
  .sponsors-title {
    margin-top: -12vh;
    font-size: 1.8em;
    padding-bottom: 15vh;
  }
  .sponsors-details {
    margin-top: -12vh;
    font-size: 1.1em;
    letter-spacing: 0.5px;
    padding-bottom: 10%;
  }
  .individual-sponsor {
    display: flex;
    flex-direction: column;
    overflow-x: scroll;
    max-width: 100%;
    height: 330px;
  }
  .individual-sponsor > a {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-tap-highlight-color: transparent;
  }
 .previous-sponsors {
    display:flex;
    flex-direction: row;
 }
}
@media only screen and (min-height: 900px) {
    .sponsors-container {
        min-height: 0vh;
    }
}

